force-app/main/default/objects/Bulk_Data_Loader__c/Bulk_Data_Loader__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Bulk Data Loader</label>
</CustomObject>