force-app/main/default/objects/Bulk_Data_Loader__c/fields/Assoc_Field__c.field-meta.xml
<CustomField>
    <fullName>Assoc_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this column is a field used in a record association process after insertion.</description>
    <inlineHelpText>Indicates that this column is a field used in a record association process after insertion.</inlineHelpText>
    <label>Assoc Field</label>
    <type>Checkbox</type>
</CustomField>