force-app/main/default/objects/Bulk_Data_Loader__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <description>API name of child object in record association. This should be populated if the Post Link Object custom setting column is populated. The child object should match an API name of one of the objects used in the integration process.</description>
    <label>Child_Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>