force-app/main/default/objects/Bulk_Data_Loader__c/fields/Column_Index__c.field-meta.xml
<CustomField>
    <fullName>Column_Index__c</fullName>
    <description>Column position in data template file</description>
    <inlineHelpText>Column position in data template file</inlineHelpText>
    <label>Column Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>