force-app/main/default/objects/Bulk_Data_Loader__c/fields/File_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>File_Field_Label__c</fullName>
    <description>Identifying field label or data column header.</description>
    <inlineHelpText>Identifying field label or data column header.</inlineHelpText>
    <label>File Field Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>