force-app/main/default/objects/Bulk_Data_Loader__c/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <description>Identifying integration label.</description>
    <inlineHelpText>A descriptive label identifying the import process under which field mappings should be grouped. This should be an Alpha-only string with no spaces.</inlineHelpText>
    <label>Integration Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>