force-app/main/default/objects/Bulk_Data_Loader__c/fields/Lead_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Field__c</fullName>
    <description>Lead Source field name</description>
    <inlineHelpText>Enter lead source name to be associated with any records created (if required)</inlineHelpText>
    <label>Lead Source Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>