force-app/main/default/objects/Bulk_Data_Loader__c/fields/Lead_Source_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Prefix__c</fullName>
    <description>Prefix string to lead source field value</description>
    <inlineHelpText>Enter an identifying lead source prefix value (if required)</inlineHelpText>
    <label>Lead Source Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>