force-app/main/default/objects/Bulk_Data_Loader__c/fields/Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that this field is a Lookup field.</description>
    <label>Lookup</label>
    <type>Checkbox</type>
</CustomField>