force-app/main/default/objects/Bulk_Data_Loader__c/fields/Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object__c</fullName>
    <description>Lookup object used to derive required id value.</description>
    <label>Lookup Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>