force-app/main/default/objects/Bulk_Data_Loader__c/fields/Lookup_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Search_Field__c</fullName>
    <description>Lookup object field to search in order to derive Id.</description>
    <label>Lookup Search Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>