force-app/main/default/objects/Bulk_Data_Loader__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether field is a mandatory item.</description>
    <inlineHelpText>Indicate whether field is a mandatory item.</inlineHelpText>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>