force-app/main/default/objects/Bulk_Data_Loader__c/fields/Master_Object__c.field-meta.xml
<CustomField>
    <fullName>Master_Object__c</fullName>
    <description>API name of master object in record association. This should be populated if the Post Link Object custom setting column is populated.</description>
    <label>Master Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>