force-app/main/default/objects/Bulk_Data_Loader__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Salesforce Object API Name</description>
    <inlineHelpText>Salesforce Object API Name</inlineHelpText>
    <label>Object API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>