force-app/main/default/objects/Bulk_Data_Loader__c/fields/Owner_Field__c.field-meta.xml
<CustomField>
    <fullName>Owner_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this field should be the owner of all records inserted.</description>
    <label>Owner Field</label>
    <type>Checkbox</type>
</CustomField>