force-app/main/default/objects/Bulk_Data_Loader__c/fields/ParentField__c.field-meta.xml
<CustomField>
    <fullName>ParentField__c</fullName>
    <description>The reference to the Parent object (if applicable). Format should be Object Reference field = Parent Field.</description>
    <inlineHelpText>The reference to the Parent object (if applicable). Format should be Object Reference field = Parent Object Field. eg AccountId=Account.Id</inlineHelpText>
    <label>ParentField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>