force-app/main/default/objects/Bulk_Data_Loader__c/fields/Post_Link_Object__c.field-meta.xml
<CustomField>
    <fullName>Post_Link_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If populated, indicates that an association to an existing record is required. The Master Object and Child Object custom setting field values indicate the record to associate to.</description>
    <label>Post Link Object</label>
    <type>Checkbox</type>
</CustomField>