force-app/main/default/objects/Bulk_Data_Loader__c/fields/Process_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Process_Sequence__c</fullName>
    <description>The sequence the object should be processed in a multiple object integration.</description>
    <inlineHelpText>The sequence the object should be processed in a multiple object integration. For example, parent objects should be processed before child objects.</inlineHelpText>
    <label>Process Sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>