force-app/main/default/objects/Bulk_Data_Loader__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>Store the record type name for the object</description>
    <label>RecordType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>