force-app/main/default/objects/Bulk_Data_Loader__c/fields/Salesforce_API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_API_Field_Name__c</fullName>
    <description>Salesforce API field name</description>
    <inlineHelpText>Salesforce API field name</inlineHelpText>
    <label>Salesforce API Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>