force-app/main/default/objects/Bulk_Data_Loader__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Active__c</columns>
    <columns>Column_Index__c</columns>
    <columns>File_Field_Label__c</columns>
    <columns>Integration_Name__c</columns>
    <columns>Lead_Source_Field__c</columns>
    <columns>Lead_Source_Prefix__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>ParentField__c</columns>
    <columns>Process_Sequence__c</columns>
    <columns>RecordType__c</columns>
    <columns>Salesforce_API_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>